fix: white spaces on component due to conditional mat-hint visibility

--- a/frontend/src/app/shared/dialog-toggle-preferences/dialog-toggle-preferences.component.scss
+++ b/frontend/src/app/shared/dialog-toggle-preferences/dialog-toggle-preferences.component.scss
@@ -5,6 +5,12 @@
     display: flex;
     flex-direction: row-reverse;
   }
+
+  .mat-mdc-form-field:not(.has-hint) {
+    .mat-mdc-form-field-subscript-wrapper {
+      display: none !important;
+    }
+  }
 }
 
 :host {
